# minisite

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: backlog.md
minisite/: main.py
minisite/api/: content.py
minisite/core/: config.py  events.py
minisite/services/: wordpress.py
minisite/templates/: content.html  index.html
tests/: test_dummy.py  test_index.py  test_wordpress_auth.py
